# CRPropa3

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: create_conda_package.yml  create_conda_package_arm.yml  create_conda_package_macos.yml  create_conda_package_x64.yml  create_coverage_report.yml  create_documentation.yml  deploy_new_documentation.yml  test_conda_package.yml  test_examples.yml  testing_OSX.yml  testing_plugin-template.yml  testing_ubuntu22.yml  testing_ubuntu24.yml
conda-bld/: build.sh  deactivate.sh  meta.yaml  post-link.sh  pre-link.sh  pre-unlink.sh
doc/: building_blocks.rst  conf.py  index.rst
doc/pages/: AdditionalResources.rst  Cpp-projects.md  Installation.md  Simulation-Modules.md  extending_crpropa.rst
doc/pages/example_notebooks/: convert.py
doc/pages/example_notebooks/photon_propagation/: galactic_propagation_gammarays_ISRF.ipynb
doc/pages/example_notebooks/photonfield_grid/: 01_field_generation.ipynb  02_position_dependent_propagation.ipynb
include/: CRPropa.h
include/crpropa/: AssocVector.h  Candidate.h  Common.h  Cosmology.h  Geometry.h  Grid.h  GridTools.h  Histogram.h  InteractionRates.h  Module.h  ModuleList.h  ParticleID.h  PhotonBackground.h  Referenced.h  Sampler.h  Units.h  Vector3.h  Version.h.in
include/crpropa/advectionField/: AdvectionField.h
include/crpropa/magneticField/turbulentField/: SimpleGridTurbulence.h  TurbulentField.h
include/crpropa/massDistribution/: ConstantDensity.h  Cordes.h  Density.h  Ferriere.h  MassDistribution.h  Massdistribution.h  MediumComposition.h  Nakanishi.h  TargetMedium.h
include/crpropa/module/: Acceleration.h  AdiabaticCooling.h  EMDoublePairProduction.h  EMInverseComptonScattering.h  EMPairProduction.h  EMTripletPairProduction.h  ElasticScattering.h  ElectronPairProduction.h  HDF5Output.h  HadronicInteraction.h  NuclearDecay.h  Observer.h  Output.h  PhotoDisintegration.h  PhotoPionProduction.h  Redshift.h  SynchrotronRadiation.h  TextOutput.h  Tools.h
libs/kiss/src/: path.cpp
libs/sophia/: sophia.h  sophia_interface.f
plugin-template/: CMakeLists.txt  README.md
plugin-template/cmake/: FindCRPropa.cmake  Findcrpropa.cmake
plugin-template/include/: myPlugin.h
plugin-template/include/myPlugin/: plugin.h
plugin-template/python/: findCRPropa.py  myPlugin.i
plugin-template/src/: plugin.cpp
plugin-template/test/: testPlugin.cpp  testPlugin.py
python/: 1_swig.i  2_headers.i  4_lens.i  checkMatplotlib.py  crpropa-builtin.i  crpropa.i
src/: Candidate.cpp  Common.cpp  Cosmology.cpp  Geometry.cpp  GridTools.cpp  InteractionRates.cpp  Module.cpp  ModuleList.cpp.in  ParticleID.cpp  ParticleMass.cpp  ParticleState.cpp  PhotonBackground.cpp  Random.cpp  Sampler.cpp  Source.cpp  Variant.cpp
src/advectionField/: AdvectionField.cpp
src/magneticField/: CMZField.cpp  MagneticField.cpp
src/massDistribution/: ConstantDensity.cpp  Cordes.cpp  Density.cpp  Ferriere.cpp  MassDistribution.cpp  MediumComposition.cpp  Nakanishi.cpp  TargetMedium.cpp
src/module/: Acceleration.cpp  AdiabaticCooling.cpp  EMDoublePairProduction.cpp  EMInverseComptonScattering.cpp  EMPairProduction.cpp  EMTripletPairProduction.cpp  ElasticScattering.cpp  ElectronPairProduction.cpp  HDF5Output.cpp  HadronicInteraction.cpp  NuclearDecay.cpp  Observer.cpp  Output.cpp  PhotoDisintegration.cpp  PhotoPionProduction.cpp  PhotonOutput1D.cpp  Redshift.cpp  SynchrotronRadiation.cpp  TextOutput.cpp
test/: testCore.cpp  testDensity.cpp  testInteraction.cpp  testMomentumDiffusion.py  testOutput.cpp  testPythonExtension.py  testSampler.cpp
